<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">奇异果</string>
    <string name="action_settings">设置</string>
    <string name="str_asynctask__progress">下载进度</string>
    <string name="str_broadcast__send_broadcast">发送广播</string>
    <string name="str_image__get_image">获取图片</string>
    <string name="str_image__url">http://pic1.sc.chinaz.com/files/pic/pic9/201403/apic293.jpg</string>
    <string name="str_image__no_image">图片不存在</string>
    <string name="str_image__get_image_error">获取图片失败</string>
    <string name="str_wifi__scan">扫描网络</string>
    <string name="str_wifi__open">打开Wifi</string>
    <string name="str_wifi__close">关闭Wifi</string>
    <string name="str_wifi__status">Wifi状态</string>
    <string name="str_wifi__info">扫描不到Wifi网络</string>
    <string name="str_bluetooth__open">打开蓝牙</string>
    <string name="str_bluetooth__close">关闭蓝牙</string>
    <string name="str_changedrawable__text">改变Drawable背景图片</string>
    <string name="str_link_text"><a href="tel:15138006048">打电话</a></string>
    
    <string name="mode_ready">Snake\nPress Up To Play</string>
    <string name="mode_pause">Paused\nPress Up To Resume</string>
    <string name="mode_lose">Game Over\nScore: %1$d \nPress Up To Play</string>
    <string name="time">00:00:00</string>
    <string name="this_is_fragment_1">This is fragment #1</string>
    <string name="this_is_fragment_2">This is fragment #2</string>
    <string name="get_text_in_fragment_1">Get text in Fragment #1</string>
    <string name="login">登录</string>
    <string name="wifi_log">wifi log</string>
    <string name="bt_log">bt log</string>
    <string name="gnss_log">gnss log</string>
    <string name="system_log">system log</string>

</resources>