<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/id_wifi__scan_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wifi__scan" />

        <Button
            android:id="@+id/id_wifi__open_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wifi__open" />

        <Button
            android:id="@+id/id_wifi__close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wifi__close" />

        <Button
            android:id="@+id/id_wifi__status_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wifi__status" />

        <TextView
            android:id="@+id/id_wifi__info_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_wifi__info" />
    </LinearLayout>

</ScrollView>