<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_image__get_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/id_image__url_et"
            android:labelFor="@+id/id_image__url_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textUri"
            android:text="@string/str_image__url" >
        </EditText>

        <Button
            android:id="@+id/id_image__get_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_image__get_image"
            android:onClick="showImage" />
    </LinearLayout>

    <ImageView
        android:id="@+id/id_image__imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/str_image__no_image"
        android:src="@drawable/ic_launcher" />

</LinearLayout>